Input text and restructure file

--- a/index.html
+++ b/index.html
@@ -12,27 +12,30 @@
     </header>
     <main>
         <article>
-            <aside>
-                <h3>Bella</h3>
-                <img src="/images/img/author.jpeg" alt="The author looking into a beautiful foggy landscape with a forest in the background">
-                <p>Furhter articles</p>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </aside>
             <h2>
-
+                HTML 
             </h2>
             <h3>
-
+                The art of sectioning
             </h3>
             <section>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
+                <aside>
+                    <h3>Bella</h3>
+                    <img src="/images/img/author.jpeg" alt="The author looking into a beautiful foggy landscape with a forest in the background">
+                    <h3>Furhter articles</h3>
+                    <ul>
+                        <li>Link to article 1</li>
+                        <li>Link to article 2</li>
+                        <li>Link to article 3</li>
+                    </ul>
+                </aside>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur vero facilis voluptate ad ab quia amet iste quam quis nemo.</p>
+
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt nisi amet atque? Totam quae dicta rem impedit hic doloribus delectus.</p>
+
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius quasi laboriosam molestiae harum quas ipsum, distinctio quo accusantium minus dolores!</p>
+
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias earum repellendus laborum excepturi nesciunt, dolorum distinctio quis itaque delectus commodi?</p>
             </section>
         </article>
     </main>
